fix: ensure contact card works on mobile and small screen devices

--- a/assets/stylesheets/global.css
+++ b/assets/stylesheets/global.css
@@ -35,11 +35,15 @@
 html,
 body,
 #__nuxt {
-  height: 100%;
+  min-height: 100%;
 }
 
-.bg-color-gradient {
+.bg-color-gradient::after {
   background: var(--color-gradient);
+  content: '';
+  inset: 0;
+  position: fixed;
+  z-index: -1;
 }
 
 .font-primary {
